<resources>
    <string name="app_name">IMC</string>
    <string name="weight">Poids (kg)</string>
    <string name="tall">Taille</string>
    <string name="meter">m</string>
    <string name="centimeter">cm</string>
    <string name="megaFunction">Explique-moi le résultat.</string>
    <string name="computeIMC">Calcule mon IMC</string>
    <string name="reset">remise à 0</string>
    <string name="result">Résultat</string>
    <string name="ìnfo">Vous devez cliquer sur le bouton « Calcule mon IMC » pour obtenir un résultat.</string>
    <string name="female">Femme</string>
    <string name="male">Homme</string>
    <string name="niceBoy">Vous ressemblez à Brad Pitt.</string>
    <string name="niceGirl">Vous ressemblez à Angelina Jolie.</string>
</resources>
